# stm32f4xx_hal_driver

./: .gitignore  CMakeLists.txt  conanfile.py
Inc/: stm32f4xx_hal_conf.h.in
test_package/: CMakeLists.txt  conanfile.py  main.c
